# firmware

./: .gitmodules  Charging26Profile.o2bms  Driving26Profile.o2bms  PM100DX_EEPROM  README.md
arduino/: README.md
arduino/APPS26/: APPS26.ino
arduino/EMeterTest/: EMeterTest.ino
arduino/PWM26/: PWM26.ino
arduino/RTD26/: RTD26.ino
daq/: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
daq/.playwright-mcp/: page-2026-06-01T17-29-24-998Z.yml  page-2026-06-01T17-29-40-648Z.yml  page-2026-06-01T17-31-36-270Z.yml  page-2026-06-01T17-31-59-226Z.yml  page-2026-06-01T17-32-01-018Z.yml  page-2026-06-01T17-32-55-090Z.yml  page-2026-06-01T17-37-57-767Z.yml  page-2026-06-01T17-38-04-520Z.yml  page-2026-06-01T17-40-54-786Z.yml
daq/backend/: Dockerfile  Dockerfile.prod  pyproject.toml
daq/backend/app/: config.py  main.py
daq/backend/app/api/routes/: datasets.py  upload.py
daq/backend/app/core/: auth.py  errors.py  slug.py
daq/backend/app/models/: chart.py  dataset.py
daq/backend/app/services/: chart_builder.py  csv_reader.py  dataset_registry.py  schema_inference.py
daq/backend/app/tests/: conftest.py  test_auth.py  test_chart_builder.py  test_datasets_api.py  test_slug.py  test_upload.py
daq/backend/daq_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
daq/backend/storage/: datasets.json
daq/data/: June_02_2026_Paul.csv  June_03_2026_Paul.csv  June_05_2026_Neel.csv  June_05_2026_Neel_50Hz.csv  June_13_2026_Peter.csv  June_15_Neel_1.csv  June_15_Neel_2.csv  June_15_Neel_3.csv  June_15_Neel_4.csv  June_15_Neel_5.csv  June_16_Neel_1.csv  June_16_Neel_2.csv  June_16_Neel_3.csv  May_22_2026_Peter.csv  May_30_2026_Peter.csv  jUNE_01_APPS_LOG.CSV
daq/frontend/: Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
daq/infra/: .env.example
offline-daq/: .gitignore  README.md  pyproject.toml
offline-daq/src/offline_daq_viewer/: __init__.py  main.py
offline-daq/src/offline_daq_viewer/data/: csv_loader.py  downsample.py  paths.py
offline-daq/src/offline_daq_viewer/plot/: __init__.py  plot_widget.py
offline-daq/src/offline_daq_viewer/ui/: main_window.py
offline-daq/tests/: test_csv_loader.py  test_downsample.py  test_paths.py
precharge/: .gitignore  README.md  build.zig  build.zig.zon
precharge/data/: sim-data.txt
precharge/src/: main.zig  root.zig
python/: app.py  daq-log-1778033808.790161.csv  daq-log-1778035213.480812.csv  daq-log-1778036232.538829.csv  daq-log-1778036383.052663.csv  daq-log-1778036453.913204.csv  daq-log-1778036779.696482.csv  daq-log-1778036871.989557.csv  daq-log-1778042214.566209.csv  log-1778014384.271054.csv  log-1778016118.378419.csv  log-1778018805.79268.csv  log-1778020004.835497.csv  log-1778032752.067769.csv  log-1778033184.876985.csv  log-1778033326.255.csv  log-1778033412.559662.csv  log-1778033607.97144.csv  log-1778033808.790157.csv  log-1778035213.480801.csv  log-1778036232.5388181.csv  log-1778036383.0526521.csv  log-1778036453.913193.csv  log-1778036779.696471.csv  log-1778036871.989546.csv  log-1778036927.66878.csv  log-1778036984.803465.csv  log-1778037065.055399.csv  log-1778037143.2737868.csv  log-1778040109.011883.csv  log-1778040218.02761.csv  log-1778042214.566199.csv  log.csv  main.py  pyproject.toml  test.txt
python/assets/: dark-theme.css
python/filtering/: main.py
python/logs/: daq-log-1778112236.1091561.csv  daq-log-1778112305.8266392.csv  log-1778110803.6051562.csv  log-1778111126.921582.csv  log-1778112236.109152.csv
python/logs/old-logs/: daq-log-1778039991.329509.csv  daq-log-1778040109.011887.csv  daq-log-1778040218.027622.csv  daq-log-1778042061.3081138.csv  daq-log-1778110803.60517.csv  daq-log-1778111126.921586.csv  log-1778039991.3294961.csv  log-1778042061.3080971.csv  log-1778112305.826627.csv
python/logs/run-2026-05-07_15-55-58/: daq.csv  fault.csv  temperature.csv
python/logs/run-2026-05-07_16-00-39/: daq.csv  fault.csv  temperature.csv
python/logs/run-2026-05-07_16-13-11/: daq.csv  fault.csv  temperature.csv
python/logs/run-2026-05-07_16-18-49/: daq.csv  fault.csv  inverter.csv  temperature.csv
python/logs/run-2026-05-07_20-41-03/: daq.csv  fault.csv  inverter.csv  motor.csv  temperature.csv
python/logs/run-2026-05-07_20-43-47/: daq.csv  fault.csv  inverter.csv  motor.csv
python/logs/run-2026-05-07_20-55-33/: daq.csv  fault.csv  inverter.csv  motor.csv
rfr26-tempSensor/: .cproject  .mxproject  no semihosting.launch  rfr26-tempSensor Release.launch  rfr26-tempSensor.ioc
rfr26-tempSensor/Debug/: makefile  objects.list  rfr26-tempSensor.elf  rfr26-tempSensor.list  rfr26-tempSensor.map
rfr26-tempSensor/Release/: makefile  objects.list  rfr26-tempSensor.elf  rfr26-tempSensor.list  rfr26-tempSensor.map  sources.mk
vectorNav/: LICENSE.txt  README.md  changelog.txt  rfr26vectornav.py  rfr_vn300_logger.py
vectorNav/cli/: CMakeLists.txt  Documentation.html
vectorNav/cli/src/: AssemblyInfo.cpp  CLI_Sensor.cpp  CMakeLists.txt
vectorNav/cpp/: CMakeLists.txt
vectorNav/cpp/examples/FirmwareUpdate/: CMakeLists.txt  main.cpp
vectorNav/cpp/plugins/RegisterScan/: CMakeLists.txt
vectorNav/cpp/plugins/RegisterScan/include/vectornav/: ConfigReader.hpp  ConfigWriter.hpp  RegisterScan.hpp
vectorNav/cpp/plugins/RegisterScan/src/: ConfigReader.cpp  ConfigWriter.cpp  RegisterScan.cpp
vectorNav/cpp/plugins/ros2/vectornav/: CMakeLists.txt  package.xml
vectorNav/cpp/plugins/ros2/vectornav/config/: vectornav.yaml
vectorNav/cpp/plugins/ros2/vectornav/include/: publishing.hpp  vectornav.hpp
vectorNav/cpp/plugins/ros2/vectornav/launch/: vectornav.launch.py
vectorNav/cpp/plugins/ros2/vectornav/src/: vectornav.cc
vectorNav/cs/examples/FirmwareUpdate/: CMakeLists.txt  FirmwareUpdate.cs
vectorNav/documentation/: .buildinfo  Documentation.html  genindex.html  objects.inv  search.html  searchindex.js
vectorNav/matlab/: Documentation.html
vectorNav/net/: Documentation.html
vectorNav/python/: Documentation.html  (+2 more)
(+2855 files in other folders)
