[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "offline-daq-viewer"
version = "0.1.0"
description = "Offline CSV viewer for plotting any two columns from large data files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "polars>=1.0",
  "pyqtgraph>=0.13",
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
offline-daq-viewer = "offline_daq_viewer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

