[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.1.0",
    "dash-ag-grid>=35.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyserial>=3.5",
    "python-can[serial]>=4.6.1",
    "rich>=15.0.0",
]
