[project]
name = "daq-backend"
version = "0.1.0"
description = "CSV chart backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
